# deep-precision-lander-rl-ppo

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: analyze_agent.py  evaluate.py  evaluate_simple_ui.py  evaluate_with_manual_ui.py  evaluate_with_ui.py  example.py  test_episode_termination.py  test_precision.py  test_real_episode_termination.py  train.py  train_enhanced.py  train_extended.py  train_landing_focused.py  train_optimized.py  train_precision.py  train_with_monitor.py
src/deep_precision_lander_rl_ppo/: __init__.py  custom_lander_env.py
tests/: test_custom_lander_env.py
